methods.basics.Methods.scala.code
def goAndGet() {
var a=0
}

for (i <- 1 to 7) {
    if (!estSurBiscuit) {
      avance()
    	a = a + 1}
}
prendBiscuit()
while (a>0) {
  recule()
  a = a - 1
}
poseBiscuit()